# opera-sds-ops

./: .coverage  .gitignore  Dockerfile  README.md  cmn_send_manual.py  es_query_executor.py  find_granules.py  get_granule.py  get_hls_granule_by_tile.py  hls_to_dwsx_s3_prefix.py  hls_to_s3_prefix.py  missing_granules.py  screenrc  slc_granules_to_bursts.py  slc_outputs.py  slc_plot.py  slc_query.py  slc_to_R2_outputs.py  static_layer_cleanup.py  trigger_dswx_from_list_of_granules.sh  trigger_from_list.sh
OPS_config/: README_screenrc
OPS_rules/: mozart_rules.csv  user_rules.json
OPS_work/: 20231006_HLS_run.txt  20231006_missing_HLS.txt  2025-Oct_RTC.sh  2025_CSLC.sh  Australian_Granules.txt  Australian_Static_Input.lst  HLS_20250428.txt  HLS_20250428_AntiMerredian.txt  RTC_request_20250425.lst  RTC_request_20250425.sh  Sep20_HLS_run.txt  Sep20_missing_HLS.txt  Sep20_remaining.cmd  Sep20_remaining.txt  Short_Name.txt  Short_Name_cmd.txt  bach_DSWx-S1_cmr_audit.py  bach_HLS_cmr_audit.py  bach_RTC_cmr_audit.py  command.sh  gen_CSLC_Australia.sh  hls_cumulus_test  lines_only_in_CSLC_2025_No_S1C.txt  lines_only_in_RTC_2025_No_S1C.txt  missing_granules_SLC-RTC_20251001-000000Z_20251030-000000Z_20251030-160154Z.txt  name.lst  native_id_per_tilecollectionsets_RTC-DSWx_2025-08.txt  native_id_per_tilecollectionsets_RTC-DSWx_2025-09.txt  ops_gen_RTC_DSWx_S1.sh  ops_gen_SLC.sh  ops_gen_hls.sh  ops_run_gen.sh  ops_run_gen_RTC.sh  ops_run_gen_SLC.sh  path_rec  read_run.sh  runRTC.sh  run_Australia_CSLC.sh  run_Australia_CSLC_Static.sh  run_DSWx-S1_2024-08.sh  (+4 more)
audit_dswx/: DATAFLOW.md  README.md  audit_dswx_inputs.py  audit_last_1_year.sh  audit_last_2_years.sh  audit_last_5_years.sh
duplicates/: duplicate_and_accountability_cron.py  duplicate_check.py  requirements.txt
es_query_executor/: README.md  es_query_executor.py
metrics_report_generation/: generate_unified_summary_report.py
mgrs_tile_to_safe_archive/: MGRS_selected.csv  README.md  mgrs_tile_to_safe_archive.py  mgrs_with_no_safe_coverage.txt  requirements.txt  s1_slc_ids.csv  s1_slc_results.csv
missing_rtc_static_layers/: bursts_output.geojson  count_safe_ids.sh  csv_to_geojson.py  (+21 more)
opera-audit/: .coverage  .gitignore  CONSOLIDATION_MAP.md  README.md  USAGE_EXAMPLE.md  config.yaml  pyproject.toml
opera-audit/.streamlit/: config.toml
opera-audit/data/: opera-s1-disp-frame-to-burst-sample.json
opera-audit/src/opera_accountability/: __init__.py  accountability.py  burst_coverage.py  burst_db.py  cli.py  cmr.py  cmr_async.py  config.yaml  dashboard.py  duplicates.py  recovery_file.py  reports.py  slc_annotations.py
opera-audit/src/opera_accountability/strategies/: __init__.py  base.py  date_count.py  db_based.py  delegated_validator.py  forward_map.py
opera-audit/src/opera_accountability/strategies/dist_s1/: __init__.py  accountability.py  iso_xml.py  pipeline.py  survey.py  utils.py
opera-audit/src/opera_accountability/strategies/dswx_hls/: __init__.py  accountability.py
opera-audit/src/opera_accountability/strategies/dswx_s1/: __init__.py  cycles.py  mapping.py  pipeline.py  rtc_utils.py  survey.py  tile_sets.py
opera-audit/tests/: test_accountability.py  test_burst_coverage.py  test_cli_dispatch.py  test_cmr_async.py  test_cmr_integration.py  test_cmr_retry.py  test_dashboard_loader.py  test_disp_s1_end_conflict_integration.py  test_dist_s1_strategy.py  test_dswx_s1_strategy.py  test_duplicates.py  test_end_conflict_detection.py  test_memory_efficient.py  test_product_patterns.py  test_recovery_file.py  test_strategies.py
(+1469 files in other folders)
