[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opera-accountability"
version = "0.1.0"
description = "OPERA accountability and duplicate detection framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "OPERA Team", email = "opera-sds@jpl.nasa.gov"}
]
keywords = ["OPERA", "CMR", "duplicates", "accountability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "backoff>=2.2.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "streamlit>=1.29.0",
    "streamlit-shadcn-ui>=0.1.18",
    "altair>=5.0.0",
    "python-dateutil>=2.8.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
dist_s1 = [
    "boto3>=1.28.0",
    "botocore>=1.31.0",
]
burst_db = [
    "data-subscriber>=0.1.0",
]
burst_coverage = [
    "shapely>=2.0.0",
]
grq = [
    "opensearch-py>=2.4.0",
]

[project.scripts]
opera-audit = "opera_accountability.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opera_accountability = ["config.yaml"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=opera_accountability --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow running (deselect with '-m \"not slow\"')",
]
